--- a/BuDeJie/Classes/Essence(精华)/Views/BYTopicVoiceView.xib
+++ b/BuDeJie/Classes/Essence(精华)/Views/BYTopicVoiceView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -62,7 +62,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="imgView" destination="isR-Q8-V4H" id="NmG-Bq-GzH"/>
-                <outlet property="placeholderView" destination="isR-Q8-V4H" id="us8-F6-vmR"/>
+                <outlet property="placeholderView" destination="g5X-Ec-pmr" id="0cZ-iU-lZm"/>
                 <outlet property="playcountLabel" destination="ZLQ-5F-nuS" id="cY1-Lp-AII"/>
                 <outlet property="voicetimeLabel" destination="NpV-h9-CGS" id="3mb-0s-8Tj"/>
             </connections>
